--- a/client/index.html
+++ b/client/index.html
@@ -66,6 +66,8 @@
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/contact/contact.controller.js"></script>
+      <script src="app/httpServices/httpServices.service.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="components/footer/footer.directive.js"></script>
