add, edit, delete functionality added

--- a/client/index.html
+++ b/client/index.html
@@ -65,14 +65,15 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/app.constant.js"></script>
-      <script src="app/contact/contact.controller.js"></script>
+      <script src="app/main/main.js"></script>
+      <script src="app/contact/contact.js"></script>
       <script src="app/httpServices/httpServices.service.js"></script>
       <script src="app/main/main.controller.js"></script>
-      <script src="app/main/main.js"></script>
+      <script src="app/contact/contact.controller.js"></script>
       <script src="components/footer/footer.directive.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
+      <script src="app/app.constant.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
